# motion-gun-game

./: .gitignore  PLAN.md  README.md
python/: bootstrap.ps1  pyproject.toml  requirements.txt  run_sender.ps1  run_tests.ps1
python/configs/: starter_camera_config.json
python/src/motion_gun/: __init__.py  config.py  feature_extractor.py  gesture_engine.py  harness.py  main.py  models.py  protocol.py  runtime.py  transport.py  vision.py
python/tests/: test_gesture_engine.py  test_harness.py
python/tests/fixtures/: fire_and_reload.json  weapon_switch_and_tracking_loss.json
unity/: README.md
unity/Assets/Scripts/MotionGun/Editor/: MotionGunSceneBootstrapper.cs
unity/Assets/Scripts/MotionGun/Gameplay/: IMotionGunTarget.cs  MotionGunController.cs  RangeSessionController.cs  RangeTarget.cs  WeaponConfig.cs
unity/Assets/Scripts/MotionGun/Runtime/: GesturePacket.cs  IGesturePacketSource.cs  IMotionGunTimeSource.cs  UdpGestureClient.cs  UnityMotionGunTimeSource.cs
unity/Assets/Scripts/MotionGun/UI/: AimReticleController.cs  RangeHudController.cs
