[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "motion-gun-game-vision"
version = "0.1.0"
description = "Gesture recognition service for the motion gun game demo."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
vision = [
  "mediapipe>=0.10.14",
  "opencv-python>=4.10.0",
  "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]
